 -- Added @switch/notify.
 -- Merge Firan MUX source modification and collected them under the
    --enable-firanmux ./configuration switch. This also typically
    requires the --enable-memorybased switch. Some of the following
    may eventually be enabled in the default build:

    Attributes:  @alead, @lead, @olead, and @color
    Commands:    @email
    Permissions: no_immobile, no_restricted
    Options:     immobile_message, sql_server, sql_user, sql_password,
                 sql_database, mail_server, mail_ehlo, mail_sendaddr,
                 mail_sendname, and mail_subject.
    Flags:       LINEWRAP, IMMOBILE, RESTRICTED, and PARENT.
    Functions:   sql(), setparent(), setname(), trigger(), mailsize(),
                 mailsubj(), mailj(), text(), successes(), and
                 distribute().

 -- Added --enable-firanmuxconvert which turns on code to remap three
    conflicting attribute numbers. The first database load requires
    this switch, and then it should be turned off.
 -- Included distribute() in the default build.
 -- Added float_precision configuration parameter.
 -- Added TRACE attribute flag which provide a finer-grain debugging
    tool than @set'ing TRACE on the object. Requested by Nixer.
    Implemented by Brazil.
 -- Added escapes for CR, LF, TAB, and ESC to the flatfile format. This
    flatfile no longer contains a mix of CRLF and LF to confuse flatfile
    portability.
 -- Add lflags(<obj>/<attr>) form similar to flags(<obj>/<attr>).
 -- @power will accept multiple power changes in one command.
 -- Add @trigger/notify.
 -- Added etimefmt().
 -- Added nine additional parameters to map() which (if present) are
    passed in as arguments %1-%9.  Suggested by Ian.
 -- Added nine additional parameters to filter() and filterbool() which
    (if present) are passed in as arguments %1-%9.  Suggested by Ronan.
 -- Added lbuf_size as a read-only configuration option so that
    config(lbuf_size) can report it to softcode.